--- a/.github/workflows/docker_server.yml
+++ b/.github/workflows/docker_server.yml
@@ -26,9 +26,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
-          platforms: |
-            linux/amd64
-            linux/arm64
+          platforms: linux/amd64
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -39,7 +37,7 @@ jobs:
       - name: Build Docker image
         uses: docker/build-push-action@v5
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: false
           tags: |
             ${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
