--- a/.github/workflows/docker_server.yml
+++ b/.github/workflows/docker_server.yml
@@ -38,7 +38,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           platforms: linux/amd64
-          push: false
+          push: true
           tags: |
-            ${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
             ${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
