--- a/.github/workflows/docker_server.yml
+++ b/.github/workflows/docker_server.yml
@@ -15,6 +15,8 @@ env:
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
   IMAGE_NAME: softethervpn-server
+  VPN_NAME: vpnserver
+  VPN_BIN_DIR: /usr/local/libexec/softether/vpnserver
 
 jobs:
   build-and-publish:
@@ -39,5 +41,8 @@ jobs:
         with:
           platforms: linux/amd64
           push: true
+          build-args: |
+            VPN_NAME=${{ env.VPN_NAME }}
+            VPN_BIN_DIR=${{ env.VPN_BIN_DIR }}
           tags: |
             ${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
