--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -14,13 +14,47 @@ on:
 env:
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-  IMAGE_NAME: softethervpn-server
-  VPN_NAME: vpnserver
-  VPN_BIN_DIR: /usr/local/libexec/softether/vpnserver
 
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
+    env:
+      IMAGE_NAME: softethervpn-server
+      VPN_NAME: vpnserver
+      VPN_BIN_DIR: /usr/local/libexec/softether/vpnserver
+
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          platforms: linux/amd64
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ env.DOCKER_USERNAME }}
+          password: ${{ env.DOCKER_PASSWORD }}
+      
+      - name: Build Docker image
+        uses: docker/build-push-action@v5
+        with:
+          platforms: linux/amd64
+          push: true
+          build-args: |
+            VPN_NAME=${{ env.VPN_NAME }}
+            VPN_BIN_DIR=${{ env.VPN_BIN_DIR }}
+          tags: |
+            ${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+
+  build-and-publish-bridge:
+    runs-on: ubuntu-latest
+    env:
+      IMAGE_NAME: softethervpn-bridge
+      VPN_NAME: vpnbridge
+      VPN_BIN_DIR: /usr/local/libexec/softether/vpnbridge
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
