--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -51,11 +51,47 @@ jobs:
           tags: |
             ${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
 
-  build-and-publish-bridge:
+  build-and-publish-bridge-aarch64:
     runs-on: ubuntu-latest
     env:
       BASE_IMAGE_NAME: 'arm64v8/centos'
       BASE_IMAGE_TAG: '7.9.2009'
+      IMAGE_NAME: softethervpn-bridge
+      VPN_NAME: vpnbridge
+      VPN_BIN_DIR: /usr/local/libexec/softether/vpnbridge
+      VPN_CMD: vpnbridge
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          platforms: linux/arm64
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ env.DOCKER_USERNAME }}
+          password: ${{ env.DOCKER_PASSWORD }}
+      
+      - name: Build Docker image
+        uses: docker/build-push-action@v5
+        with:
+          platforms: linux/arm64
+          push: true
+          build-args: |
+            VPN_NAME=${{ env.VPN_NAME }}
+            VPN_BIN_DIR=${{ env.VPN_BIN_DIR }}
+            VPN_CMD=${{ env.VPN_CMD }}
+            IMAGE_NAME=${{ env.BASE_IMAGE_NAME }}}
+            IMAGE_VERSION=${{ env.BASE_IMAGE_TAG }}
+          tags: |
+            ${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+
+  build-and-publish-bridge:
+    runs-on: ubuntu-latest
+    env:
       IMAGE_NAME: softethervpn-bridge
       VPN_NAME: vpnbridge
       VPN_BIN_DIR: /usr/local/libexec/softether/vpnbridge
