--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -103,9 +103,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
-          platforms: |
-            linux/amd64
-            linux/arm64
+          platforms: linux/amd64
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -116,9 +114,7 @@ jobs:
       - name: Build Docker image
         uses: docker/build-push-action@v5
         with:
-          platforms: |
-            linux/amd64
-            linux/arm64
+          platforms: linux/amd64
           push: true
           build-args: |
             VPN_NAME=${{ env.VPN_NAME }}
